--- a/YellowstonePathology/UI/Client/ClientEntry.xaml
+++ b/YellowstonePathology/UI/Client/ClientEntry.xaml
@@ -1,6 +1,9 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientEntry"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:wpfx="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        xmlns:validationRules="clr-namespace:YellowstonePathology.UI.ValidationRules"
         Title="Client Entry" Height="600"  Width="900" FontSize="14"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
 
@@ -67,16 +70,16 @@
 						<TextBox Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ZipCode}" />
 					</Grid>
 
-					<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Long Distance:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.LongDistance}" />
-
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Telephone:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone, Converter={StaticResource PhoneNumberConverter}}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Fax:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax, Converter={StaticResource PhoneNumberConverter}}" />
+                    <wpfx:MaskedTextBox Name="MaskedTextBoxFax" Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" 
+                                        RestrictToAscii="False" AllowPromptAsInput="False" IncludeLiteralsInValue="False" IncludePromptInValue="False" 
+                                        ValueDataType="{x:Type sys:String}" Mask="(000) 000 0000" Value="{Binding Path=Client.Fax}">
+                    </wpfx:MaskedTextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Contact Name:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Contact Name:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ContactName}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Abbreviation:</TextBlock>
