Add Name Search to WebServiceClientSelectionDlg

--- a/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
@@ -14,12 +14,25 @@
         </Grid.ColumnDefinitions>
         
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2" Name="ListViewWebServiceAccounts" LocalUI:ListViewSorter.IsSortable="true"
-				  ItemsSource="{Binding Path=WebServiceAccountViewList}" MouseDoubleClick="ListViewWebServiceAccounts_MouseDoubleClick">
+        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Name:</TextBlock>
+        
+        <Grid Grid.Column="1" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBox Name="TextBoxSearchName" Grid.Column="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" KeyUp="TextBoxSearchName_KeyUp" ToolTip="Type name then hit enter to search." />
+            <Button Name="ButtonClearSearch" Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Right" Height="20" Width="15" Click="ButtonClearSearch_Click">X</Button>
+        </Grid>
+        
+        <ListView Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="2" Name="ListViewWebServiceAccounts" LocalUI:ListViewSorter.IsSortable="true"
+				  ItemsSource="{Binding Path=LimitedWebServiceAccountViewList}" MouseDoubleClick="ListViewWebServiceAccounts_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=DisplayName}" Width="200" Header="Name" LocalUI:ListViewSorter.SortPropertyName="DisplayName" />
