--- a/YellowstonePathology/UI/Client/ClientEntry.xaml
+++ b/YellowstonePathology/UI/Client/ClientEntry.xaml
@@ -71,13 +71,16 @@
 					</Grid>
 
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Telephone:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone, Converter={StaticResource PhoneNumberConverter}}" />
+                    <!--<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Telephone, Converter={StaticResource PhoneNumberConverter}}" />-->
+                    <wpfx:MaskedTextBox Name="MaskedTextBoxTelephone" Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" 
+                                        RestrictToAscii="False" AllowPromptAsInput="False" IncludeLiteralsInValue="False" IncludePromptInValue="False" 
+                                        ValueDataType="{x:Type sys:String}" Mask="(000) 000\-0000" Value="{Binding Path=Client.TelephoneProxy}">
+                    </wpfx:MaskedTextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Fax:</TextBlock>
-                    <!--<TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.Fax, Converter={StaticResource PhoneNumberConverter}}" />-->
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Fax:</TextBlock>
                     <wpfx:MaskedTextBox Name="MaskedTextBoxFax" Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" 
                                         RestrictToAscii="False" AllowPromptAsInput="False" IncludeLiteralsInValue="False" IncludePromptInValue="False" 
-                                        ValueDataType="{x:Type sys:String}" Mask="(000) 000 0000" Value="{Binding Path=Client.Fax}">
+                                        ValueDataType="{x:Type sys:String}" Mask="(000) 000\-0000" Value="{Binding Path=Client.FaxProxy}">
                     </wpfx:MaskedTextBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Contact Name:</TextBlock>
