--- a/YellowstonePathology/UI/Login/ClientFaxPage.xaml
+++ b/YellowstonePathology/UI/Login/ClientFaxPage.xaml
@@ -32,10 +32,10 @@
 			</Grid.RowDefinitions>
 
 			<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Right" FontWeight="Bold">ClientName:</TextBlock>
-			<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding ClientName}"></TextBlock>
+			<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding AccessionOrder.ClientName}"></TextBlock>
 
 			<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Right" FontWeight="Bold">Patient Name:</TextBlock>
-			<TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding PatientName}"></TextBlock>
+			<TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding AccessionOrder.PatientDisplayName}"></TextBlock>
 
 			<Grid Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2">
 				<Grid.ColumnDefinitions>
@@ -85,7 +85,7 @@
 
 			<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Letter Body:</TextBlock>
 			<TextBox Name="TextBoxLetterBody"  Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" AcceptsReturn="True"
-                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" FontSize="12"></TextBox>
+                 Text="{Binding Path=MissingInformationTestOrder.LetterBody}"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" FontSize="12"></TextBox>
 
 			<StackPanel Orientation="Horizontal" Margin="2,2,2,2" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Right">
 				<Button Name="ButtonCreateLetterBody" Click="ButtonCreateLetterBody_Click" Width="100" Height="40" Margin="2,2,2,2">Create Letter</Button>
