--- a/YellowstonePathology/UI/Redis/StoreSelection.xaml
+++ b/YellowstonePathology/UI/Redis/StoreSelection.xaml
@@ -5,30 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Redis"
         mc:Ignorable="d"
-        Title="Redis Database Selection" Height="300" Width="300">
+        Title="Redis Databases" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" SizeToContent="Height" Width="600">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <ListView Grid.Row="0" Margin="2" Name="ListViewRedisDatabases"
-				ItemsSource="{Binding Path=RedisDatabases}" MouseDoubleClick="ListViewRedisDatabases_MouseDoubleClick">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=.}" Width="290" Header="Databases" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-            
-        <Grid Grid.Row="1">
+        <Grid Grid.Column="0" Grid.Row="0">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Button Name="ButtonSave" Grid.Column="0" Height="30" Width="80" Margin="2" Click="ButtonSave_Click">Save Selected</Button>
-            <Button Name="ButtonOK" Grid.Column="1" Height="30" Width="80" Margin="2" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+            <TextBlock  Grid.Column="0" Margin="2,2,2,2">Root Path:</TextBlock>
+            <TextBox Name="TextBoxPath" Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" />
+            <Button Grid.Column="2" Margin="2,2,2,2" Height="20" Width="40" Click="ButtonSelectPath_Click">...</Button>
         </Grid>
+
+        <Grid Grid.Column="0" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <CheckBox Name="CheckBoxCPTCode" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" FlowDirection="RightToLeft">Save CPT Codes</CheckBox>
+            <CheckBox Name="CheckBoxICDCode" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" FlowDirection="RightToLeft">Save ICD Codes</CheckBox>
+            <CheckBox Name="CheckBoxDictationTemplate" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" FlowDirection="RightToLeft">Save Dictation Templates</CheckBox>
+            <CheckBox Name="CheckBoxSpecimen" Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" FlowDirection="RightToLeft">Save Specimen</CheckBox>
+            <CheckBox Name="CheckBoxStain" Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" FlowDirection="RightToLeft">Save Stains</CheckBox>
+        </Grid>
+
+        <Grid Grid.Column="0" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <Button Name="ButtonSave" Grid.Column="0" Grid.Row="5" Height="30" Width="80" Margin="2" Click="ButtonSave_Click">Save Selected</Button>
+            <Button Name="ButtonOK" Grid.Column="2" Grid.Row="5" Height="30" Width="80" Margin="2" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+        </Grid>
+
+
     </Grid>
 </Window>
