--- a/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
@@ -47,9 +47,10 @@
 
 			<TextBlock Grid.Column="0" Grid.Row="2" Margin="0,20,0,0" FontWeight="Bold" FontSize="16">Options</TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
-                <Hyperlink Click="HyperLinkSetResult_Click" FontSize="14">Set Result</Hyperlink>
+            <TextBlock Name="TextBlockPreviousResults" Grid.Column="3" Grid.Row="1" Margin="5,3,0,5">
+					<Hyperlink Click="HyperLinkPreviousResults_Click">Previous Results</Hyperlink>
             </TextBlock>
+                       
 
 			<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click" FontSize="14">Accept Results</Hyperlink>
