--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -91,6 +91,7 @@
                     <MenuItem Name="MenuItemTest" Header="Testing" Click="MenuItemTest_Click"></MenuItem>
                     <MenuItem Name="MenuItemDictationTemplates" Header="Dictation Templates" Click="MenuItemDictationTemplates_Click" />
                     <MenuItem Name="MenuItemRedis" Header="Save Redis to file" Click="MenuItemRedis_Click"></MenuItem>
+                    <MenuItem Name="MenuItemChainExplorer" Header="Chain Explorer" Click="MenuItemChainExplorer_Click"></MenuItem>
                 </MenuItem>
 
                 <MenuItem Header="_Monitor" Name="MenuItemMonitor">
