--- a/YellowstonePathology/UI/Common/ReassignCaseDialog.xaml
+++ b/YellowstonePathology/UI/Common/ReassignCaseDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Common.ReassignCaseDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Reassign Case" Height="150" Width="300" FontSize="12" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" SizeToContent="Height">
+    Title="Reassign Case" Height="160" Width="350" FontSize="12" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" SizeToContent="Height">
     <Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"></ColumnDefinition>
@@ -14,15 +14,16 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
 		
-		<TextBlock Grid.Row="0" Margin="2,2,2,5">Are you sure you want to reassign this case?</TextBlock>
+		<TextBlock Grid.Row="0" Margin="10,10,2,5">Are you sure you want to reassign this case?</TextBlock>
 		
-		<TextBlock Grid.Row="1" Margin="2,5,2,2" Visibility="{Binding Path=ShowMessage}">An amemdment must accompany the reassignment. </TextBlock>
+		<TextBlock Grid.Row="1" Margin="10,5,10,2" Visibility="{Binding Path=ShowMessage}">An amendment must accompany the reassignment. </TextBlock>
 		
-		<CheckBox Name="CheckBoxCreateAmendment" Grid.Row="2" Margin="2,5,2,5" FlowDirection="RightToLeft" HorizontalAlignment="Center" Visibility="{Binding Path=ShowMessage}" IsChecked="{Binding Path=CreateAmendment}">Create the amendment now</CheckBox>
-		
-		<StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-			<Button Name="ButtonOK" Height="30" Width="50" Margin="2,2,10,2" Click="ButtonOK_Click">OK</Button>
-			<Button Name="ButtonCancel" Height="30" Width="50" Margin="10,2,2,2" Click="ButtonCancel_Click">Cancel</Button>
+		<CheckBox Name="CheckBoxCreateAmendment" Grid.Row="2" Margin="2,5,2,10" FlowDirection="RightToLeft" HorizontalAlignment="Center" Visibility="{Binding Path=ShowMessage}" IsChecked="{Binding Path=CreateAmendment}">Create the amendment now</CheckBox>
+
+        <Border Grid.Row="4" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
+        <StackPanel Grid.Row="4" Margin="2,10,10,10" Orientation="Horizontal" HorizontalAlignment="Right">
+			<Button Name="ButtonOK" Height="30" Width="60" Margin="2,2,10,2" Click="ButtonOK_Click">OK</Button>
+			<Button Name="ButtonCancel" Height="30" Width="60" Margin="10,2,2,2" Click="ButtonCancel_Click">Cancel</Button>
 		</StackPanel>
 	</Grid>
 </Window>
